Fixed gap between links

--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@ body {
     flex-direction: column;
     align-items: center;
     align-self: stretch;
-    gap: 12px;
+    gap: 16px;
 }
 
 .social-links span {
